Full menu and small fix in the Login screen alignment

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -8,7 +8,7 @@
 
 .Main-container {
   display: block;
-  height: 83.3vh;
+  height: 100vh;
   position: relative;
   width: 100%;
 
